--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^6.2.1",
     "create-hmac": "^1.1.7",
     "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^2.0.12",
     "puppeteer": "^24.19.0"
   }
